--- a/configs/dit_config.yaml
+++ b/configs/dit_config.yaml
@@ -6,6 +6,7 @@ weight_decay: 0.01
 batch_size: 32
 gradient_accumulation_steps: 2
 validation_batch_size: 8
+dataset_type: hfdataset
 
 num_epochs: 5
 max_steps: -1  
