--- a/configs/dit_config.yaml
+++ b/configs/dit_config.yaml
@@ -1,12 +1,17 @@
 vae_checkpoint: checkpoints/vit-l-20.pt
-learning_rate: 1e-5
-min_learning_rate: 1e-6
-warnup_ratio: 0.03
-weight_decay: 0.01
+learning_rate: 1e-6
+min_learning_rate: 1e-7
+warnup_ratio: 0.05
 batch_size: 32
 gradient_accumulation_steps: 2
 validation_batch_size: 8
 dataset_type: hfdataset
+
+weight_decay: 0.01
+loss_scale: 1000.0
+use_ema: true
+ema_decay: 0.995
+
 
 num_epochs: 5
 max_steps: -1  
@@ -22,6 +27,7 @@ ddim_noise_steps:  16
 ctx_max_noise_idx:  4 
 noise_abs_max: 20.0
 n_prompt_frames: 4
+
 
 
 use_action_conditioning: false
