--- a/configs/dit_config_dummy2.yaml
+++ b/configs/dit_config_dummy2.yaml
@@ -1,24 +1,20 @@
 vae_checkpoint: checkpoints/vit-l-20.pt
-pretrained_model: checkpoints/oasis500m.pt
-model_name: dit_continue3
-learning_rate: 1e-4
-min_learning_rate: 1e-5
-warnup_ratio: 0.05
+pretrained_model: null
+model_name: dit_dummy2
+learning_rate: 1e-6
+min_learning_rate: 1e-7
+warnup_ratio: 0.001
 batch_size: 32
-gradient_accumulation_steps: 2
+gradient_accumulation_steps: 1
 validation_batch_size: 8
-dataset_type: hfdataset
+dataset_type: dummy
 
 weight_decay: 0.01
-loss_scale: 1.0
-use_ema: true
-ema_decay: 0.995
 
-
-num_epochs: 5
+num_epochs: 100
 max_steps: -1  
-validation_steps: 2000
-save_every: 2000
+validation_steps: 100
+save_every: 1000000000000
 output_dir: checkpoints
 logging_steps: 5
 
@@ -29,7 +25,5 @@ ddim_noise_steps:  16
 ctx_max_noise_idx:  3 
 noise_abs_max: 20.0
 n_prompt_frames: 1
-
-
 
 use_action_conditioning: false
