--- a/configs/dit_config_dummy.yaml
+++ b/configs/dit_config_dummy.yaml
@@ -1,5 +1,5 @@
 vae_checkpoint: checkpoints/vit-l-20.pt
-pretrained_model: null
+pretrained_model: checkpoints/oasis500m.pt
 model_name: dit_dummy
 learning_rate: 1e-6
 min_learning_rate: 1e-7
@@ -14,7 +14,7 @@ weight_decay: 0.01
 num_epochs: 100
 max_steps: -1  
 validation_steps: 100
-save_every: 1000000000000
+save_every: 500
 output_dir: checkpoints
 logging_steps: 5
 
