--- a/configs/dit_config.yaml
+++ b/configs/dit_config.yaml
@@ -1,20 +1,18 @@
 vae_checkpoint: checkpoints/vit-l-20.pt
-model_name: dit_scratch
-learning_rate: 1e-6
-min_learning_rate: 1e-7
+pretrained_model: #checkpoints/oasis500m.pt
+model_name: dit
+learning_rate: 1e-4
+min_learning_rate: 1e-5
 warnup_ratio: 0.05
 batch_size: 32
-gradient_accumulation_steps: 2
+gradient_accumulation_steps: 1
 validation_batch_size: 8
 dataset_type: hfdataset
 
 weight_decay: 0.01
-loss_scale: 1000.0
-use_ema: true
-ema_decay: 0.995
 
 
-num_epochs: 5
+num_epochs: 3
 max_steps: -1  
 validation_steps: 2000
 save_every: 2000
@@ -25,7 +23,7 @@ seed: 42
 use_wandb: true
 
 ddim_noise_steps:  16
-ctx_max_noise_idx:  4 
+ctx_max_noise_idx:  3 
 noise_abs_max: 20.0
 n_prompt_frames: 4
 
