--- a/configs/dit_dummy.yaml
+++ b/configs/dit_dummy.yaml
@@ -4,23 +4,23 @@ model_name: dit
 learning_rate: 1e-4
 min_learning_rate: 1e-5
 warnup_ratio: 0.05
-batch_size: 16
+batch_size: 8
 gradient_accumulation_steps: 1
 validation_batch_size: 8
-dataset_type: hfdataset
+dataset_type: dummy
 
 weight_decay: 0.01
 
 
-num_epochs: 3
-max_steps: -1  
-validation_steps: 2000
+num_epochs: 1000
+max_steps: 1000
+validation_steps: 100
 save_every: 2000
 output_dir: checkpoints
 logging_steps: 5
 
 seed: 42
-use_wandb: true
+use_wandb: false
 
 ddim_noise_steps:  8
 ddim_noise_steps_inference: 16
