--- a/configs/dit_config_continue.yaml
+++ b/configs/dit_config_continue.yaml
@@ -4,7 +4,7 @@ model_name: dit_continue
 learning_rate: 1e-4
 min_learning_rate: 1e-5
 warnup_ratio: 0.05
-batch_size: 32
+batch_size: 16
 gradient_accumulation_steps: 1
 validation_batch_size: 8
 dataset_type: hfdataset
@@ -22,8 +22,9 @@ logging_steps: 5
 seed: 42
 use_wandb: true
 
-ddim_noise_steps:  16
-ctx_max_noise_idx:  3 
+ddim_noise_steps:  8
+ddim_noise_steps_inference: 16
+ctx_max_noise_idx:  2 
 noise_abs_max: 20.0
 n_prompt_frames: 4
 
