--- a/configs/dit_config_continue_action.yaml
+++ b/configs/dit_config_continue_action.yaml
@@ -1,26 +1,26 @@
 vae_checkpoint: checkpoints/vit-l-20.pt
-pretrained_model: #checkpoints/oasis500m.pt
-model_name: dit
+pretrained_model: checkpoints/oasis500m.pt
+model_name: dit_continue_action
 learning_rate: 1e-4
 min_learning_rate: 1e-5
 warnup_ratio: 0.05
-batch_size: 8
+batch_size: 16
 gradient_accumulation_steps: 1
 validation_batch_size: 8
-dataset_type: dummy
+dataset_type: hfdataset
 
 weight_decay: 0.01
 
 
-num_epochs: 1000
-max_steps: 1000
-validation_steps: 100
+num_epochs: 3
+max_steps: -1  
+validation_steps: 2000
 save_every: 2000
 output_dir: checkpoints
 logging_steps: 5
 
 seed: 42
-use_wandb: false
+use_wandb: true
 
 ddim_noise_steps:  8
 ddim_noise_steps_inference: 16
