--- a/configs/dit_config_more.yaml
+++ b/configs/dit_config_more.yaml
@@ -1,6 +1,6 @@
 vae_checkpoint: checkpoints/vit-l-20.safetensors
-pretrained_model: checkpoints/oasis500m.safetensors
-model_name: dit_continue
+pretrained_model: checkpoints/dit_continue_epoch_9_690000.safetensors
+model_name: dit_continue_more
 learning_rate: 1e-4
 min_learning_rate: 1e-4
 warnup_ratio: 0.05
@@ -24,7 +24,7 @@ use_wandb: true
 
 ddim_noise_steps:  50
 ddim_noise_steps_inference: 100
-ctx_max_noise_idx:  4 
+ctx_max_noise_idx:  24 
 noise_abs_max: 20.0
 n_prompt_frames: 4
 
