--- a/configs/dit_config_continue_action.yaml
+++ b/configs/dit_config_continue_action.yaml
@@ -1,8 +1,8 @@
 vae_checkpoint: checkpoints/vit-l-20.safetensors
-pretrained_model: checkpoints/oasis500m.safetensors
+pretrained_model: checkpoints/dit_continue_more_epoch_12_920000.safetensors
 model_name: dit_continue_action
 learning_rate: 1e-4
-min_learning_rate: 1e-4
+min_learning_rate: 1e-5
 warnup_ratio: 0.05
 batch_size: 16
 gradient_accumulation_steps: 1
@@ -12,7 +12,7 @@ dataset_type: hfdataset
 weight_decay: 0.0
 
 
-num_epochs: 20
+num_epochs: 5
 max_steps: -1  
 validation_steps: 10000
 save_every: 10000
@@ -24,7 +24,7 @@ use_wandb: true
 
 ddim_noise_steps:  50
 ddim_noise_steps_inference: 100
-ctx_max_noise_idx:  4 
+ctx_max_noise_idx:  40 
 noise_abs_max: 20.0
 n_prompt_frames: 4
 
